--- a/Projekt/CSS/oChorobieStyle.css
+++ b/Projekt/CSS/oChorobieStyle.css
@@ -1,599 +1,209 @@
-.to_beowe {
-    margin: 0 auto;
-    padding: 0px;
-    background-color: #eee8e6;
-  }
-
 .Rectangle-7 {
-    width: 100%;
-    height: 603px;
-    opacity: 0.9;
-    float: left;
-    margin-top: 3%;
-    padding-left: 12%;
+  width: 90%;
+  height: 603px;
+  opacity: 0.9;
+  float: left;
 }
 
 .Rectangle-7 img {
-    width: 90%;
-    height: 603px;
-    object-fit: none;
-    object-position: 55% 65%;
+  width: 100%;
+  height: 603px;
+  -o-object-fit: none;
+     object-fit: none;
+  -o-object-position: 55% 65%;
+     object-position: 55% 65%;
 }
 
-.Rectangle-9 {
-  width: 30%;
-  height: 1012px;
+.Blok {
+  background-color: #fdf6f3;
   float: left;
-  margin-top: 3%;
-  background-color: #f8f2f0;
+  width: 100%;
+  margin-top: 5%;
+  margin-left: -14%;
+  margin-right: -22%;
+  padding-left: 14%;
+  padding-top: 3%;
 }
 
-.Rectangle-9 img {
+.BlokText {
+  width: 55%;
+  float: left;
+  margin-right: 60px;
+}
+
+.BlokText__glownyNapis {
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 30px;
+  font-weight: normal;
+  font-stretch: normal;
+  font-style: normal;
+  line-height: 1;
+  letter-spacing: normal;
+  text-align: left;
+  color: #0f65b1;
+}
+
+.BlokText__pobocznyNapis {
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 18px;
+  font-weight: 300;
+  font-stretch: normal;
+  font-style: normal;
+  line-height: 1.67;
+  letter-spacing: normal;
+  text-align: left;
+  color: #596060;
+}
+
+.BlokText__pobocznyNapis--czarny {
+  font-size: 20px;
+  font-weight: 500;
+}
+
+.BlokText__pobocznyNapis--fioletowy {
+  font-size: 20px;
+  color: #897ac8;
+}
+
+.BlokText__pobocznyNapis ul {
+  list-style-position: outside;
+}
+
+.BlokImg {
+  float: left;
   width: 499.8px;
   height: 856.8px;
+  margin-bottom: 50px;
 }
 
-.container-1 {
-    width: 50%;
-    min-height: 961px;
-    background-color: #f8f2f0;
-    float: left;
-    margin-top: 3%;
-    padding-left: 12%;
-    padding-top: 3%;
-  }
-
- .container-1 .O-CHOROBIEnapis {
-    
-    height: 29px;
-    font-family: Georgia, 'Times New Roman', Times, serif;
-    font-size: 30px;
-    font-weight: normal;
-    font-stretch: normal;
-    font-style: normal;
-    line-height: 1;
-    letter-spacing: normal;
-    text-align: left;
-    color: #0f65b1;
-    
-  }
-
-.container-1 .pod-O-CHOROBIEnapis{
-    
-    width: 100%;
-    font-family: Arial, Helvetica, sans-serif;
-    font-size: 18px;
-    font-weight: 300;
-    font-stretch: normal;
-    font-style: normal;
-    line-height: 1.67;
-    letter-spacing: normal;
-    text-align: left;
-    color: #757c7c;
-    
-  }
-
-  .container-1 .pod-O-CHOROBIEnapis .pod-O-CHOROBIEnapis-2{
-    font-size: 20px;
-    font-weight: 500;
-    color: #897ac8;
-
-  }
-
- .container-1 .pod-O-CHOROBIEnapis .pod-O-CHOROBIEnapis-3{
-    font-size: 20px;
-    font-weight: 500;
-    color: #596060;
-  }
-
-  .ImgBox-1 {
-    width: 378.6px;
-    height: 450px;
-    margin-top: 2.5%;
-    margin-left: 12%;
-    float: left;
-  }
-
-  .ImgBox-2 {
-    width: 378.6px;
-    height: 450px;
-    position: absolute; left: 40%; top: 1853px;
-  }
-
-  .ImgBox-3 {
-    width: 378.5px;
-    height: 450px;
-    position: absolute; left: 70%; top: 1853px;
-  }
-
-  .shutterstock_6916 {
-    width: 100%;
-    height: 100%;
-    object-fit: contain;
-  }
-
-  .shutterstock_4089 {
-    width: 100%;
-    height: 100%;
-    object-fit: contain;
-  }
-
-  .Rectangle-29-1 {
-    width: 100%;
-    height: 101px;
-    opacity: 0.85;
-    background-color: #897ac8;
-
-  }
-
-  .ImgBox-1 img {
-    width: 100%;
-    height: 100%;
-    object-fit: contain;
-  }
-
-  .Rectangle-29-2 {
-    width: 100%;
-    height: 101px;
-    opacity: 0.85;
-    background-color: #897ac8;
-    position: absolute; bottom: 0px;
-  }
-
-  .Rectangle-29-3 {
-    width: 100%;
-    height: 101px;
-    opacity: 0.85;
-    background-color: #897ac8;
-    position: absolute; bottom: 0px;
-  }
-
-  .ImgBox-1 .WSKAZWKI-DOTYCZCE-WIADOMEGO-JEDZENIA {
-    width: 100%;
-    height: 66px;
-    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-    font-size: 20px;
-    font-weight: normal;
-    font-stretch: normal;
-    font-style: normal;
-    line-height: 1.75;
-    letter-spacing: normal;
-    text-align: center;
-    color: #ffffff;
-    
-  }
-
-  .CZYNNIKI-POWODUJACE-OBJADANIE-SI {
-    width: 100%;
-    height: 79px;
-    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-    font-size: 20px;
-    font-weight: normal;
-    font-stretch: normal;
-    font-style: normal;
-    line-height: 1.75;
-    letter-spacing: normal;
-    text-align: center;
-    color: #ffffff;
-    position: absolute; top: 84%;
-  }
-
-  .LISTA-ZAMIENNIKW-YWIENIOWYCH {
-    width: 100%;
-    height: 79px;
-    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-    font-size: 20px;
-    font-weight: normal;
-    font-stretch: normal;
-    font-style: normal;
-    line-height: 1.75;
-    letter-spacing: normal;
-    text-align: center;
-    color: #ffffff;
-    position: absolute; top: 84%;
-  }
-
-  .napisOtyo-do-czego-prowadzi {
-    
-    height: 39px;
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
-    font-size: 30px;
-    font-weight: normal;
-    font-stretch: normal;
-    font-style: normal;
-    line-height: 1;
-    letter-spacing: normal;
-    text-align: center;
-    color: #0f65b1;
-    position: absolute; left: 36%; top: 2394px;
-  }
-
-  .EliBox-1 {
-    width: 400px;
-    height: 500px;
-    position: absolute; left: 242px; top: 2500px;
-  }
-
-  .EliBox-2 {
-    width: 400px;
-    height: 500px;
-    position: absolute; left: 760px; top: 2500px;
-  }
-
-  .EliBox-3 {
-    width: 400px;
-    height: 500px;
-    position: absolute; left: 1278px; top: 2500px;
-  }
-
-  .EliBox-4 {
-    width: 400px;
-    height: 500px;
-    position: absolute; left: 242px; top: 3130px;
-  }
-
-  .EliBox-5 {
-    width: 400px;
-    height: 500px;
-    position: absolute; left: 760px; top: 3130px;
-  }
-
-  .EliBox-6 {
-    width: 400px;
-    height: 500px;
-    position: absolute; left: 1278px; top: 3130px;
-  } 
-
-  .Ellipse-1 {
-    width: 120px;
-    height: 120px;
-    background-color: #897ac8;
-    border-radius: 50%;
-    position: absolute; left: 140px; top: 0px;
-  }
-
-  .Ellipse-2 {
-    width: 120px;
-    height: 120px;
-    background-color: #897ac8;
-    border-radius: 50%;
-    position: absolute; left: 140px; top: 0px;
-    }
-
-  .Ellipse-3 {
-    width: 120px;
-    height: 120px;
-    background-color: #897ac8;
-    border-radius: 50%;
-    position: absolute; left: 140px; top: 0px;
-  }
-
-  .Ellipse-4 {
-    width: 120px;
-    height: 120px;
-    background-color: #897ac8;
-    border-radius: 50%;
-    position: absolute; left: 140px; top: 0px;
-  }
-
-  .Ellipse-5 {
-    width: 120px;
-    height: 120px;
-    background-color: #897ac8;
-    border-radius: 50%;
-    position: absolute; left: 140px; top: 0px;
-  }
-
-  .Ellipse-6 {
-    width: 120px;
-    height: 120px;
-    background-color: #897ac8;
-    border-radius: 50%;
-    position: absolute; left: 140px; top: 0px;
-  }
-
-  .Choroby-ukadu-krenia {
-    width: 400px;
-    height: 40px;
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
-    font-size: 20px;
-    font-weight: normal;
-    font-stretch: normal;
-    font-style: normal;
-    line-height: 1.2;
-    letter-spacing: normal;
-    text-align: center;
-    color: #0f65b1;
-    position: absolute; top: 30%;
-  }
-
-  .Choroby-nowotworowe {
-    width: 400px;
-    height: 40px;
-    object-fit: contain;
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
-    font-size: 20px;
-    font-weight: normal;
-    font-stretch: normal;
-    font-style: normal;
-    line-height: 1.2;
-    letter-spacing: normal;
-    text-align: center;
-    color: #0f65b1;
-    position: absolute; top: 30%;
-  }
-
-  .Cukrzyca-typu-2 {
-    width: 400px;
-    height: 40px;
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
-    font-size: 20px;
-    font-weight: normal;
-    font-stretch: normal;
-    font-style: normal;
-    line-height: 1.2;
-    letter-spacing: normal;
-    text-align: center;
-    color: #0f65b1;
-    position: absolute; top: 30%;
-  }
-
-  .Schorzenia-pcherzyka-ciowego {
-    width: 400px;
-    height: 40px;
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
-    font-size: 20px;
-    font-weight: normal;
-    font-stretch: normal;
-    font-style: normal;
-    line-height: 1.2;
-    letter-spacing: normal;
-    text-align: center;
-    color: #0f65b1;
-    position: absolute; top: 30%;
-  }
-
-  .Zaburzenia-miesiczkowania {
-    width: 400px;
-    height: 40px;
-    object-fit: contain;
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
-    font-size: 20px;
-    font-weight: normal;
-    font-stretch: normal;
-    font-style: normal;
-    line-height: 1.2;
-    letter-spacing: normal;
-    text-align: center;
-    color: #0f65b1;
-    position: absolute; top: 30%;
-  }
-
-  .Choroby-zwyrodnieniowe-staww {
-    width: 400px;
-    height: 40px;
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
-    font-size: 20px;
-    font-weight: normal;
-    font-stretch: normal;
-    font-style: normal;
-    line-height: 1.2;
-    letter-spacing: normal;
-    text-align: center;
-    color: #0f65b1;
-    position: absolute; top: 30%;
-  }
-
-  .podChoroby-ukadu-krenia {
-    width: 400px;
-    height: 322px;
-    font-family: Arial, Helvetica, sans-serif;
-    font-size: 18px;
-    font-weight: 300;
-    font-stretch: normal;
-    font-style: normal;
-    line-height: 1.67;
-    letter-spacing: normal;
-    text-align: center;
-    color: #596060;
-    position: absolute; top: 45%;
-  }
-
-  .podChoroby-nowotworowe {
-    width: 400px;
-    height: 162px;
-    font-family: Arial, Helvetica, sans-serif;
-    font-size: 18px;
-    font-weight: 300;
-    font-stretch: normal;
-    font-style: normal;
-    line-height: 1.67;
-    letter-spacing: normal;
-    text-align: center;
-    color: #596060;
-    position: absolute; top: 45%;
-  }
-
-  .podCukrzyca-typu-2 {
-    width: 400px;
-    height: 176px;
-    font-family: Arial, Helvetica, sans-serif;
-    font-size: 18px;
-    font-weight: 300;
-    font-stretch: normal;
-    font-style: normal;
-    line-height: 1.67;
-    letter-spacing: normal;
-    text-align: center;
-    color: #596060;
-    position: absolute; top: 45%;
-  }
-
-  .podSchorzenia-pcherzyka-ciowego {
-    width: 400px;
-    height: 168px;
-    font-family: Arial, Helvetica, sans-serif;
-    font-size: 18px;
-    font-weight: 300;
-    font-stretch: normal;
-    font-style: normal;
-    line-height: 1.67;
-    letter-spacing: normal;
-    text-align: center;
-    color: #596060;
-    position: absolute; top: 45%;
-  }
-
-  .podZaburzenia-miesiczkowania {
-    width: 400px;
-    height: 162px;
-    font-family: Arial, Helvetica, sans-serif;
-    font-size: 18px;
-    font-weight: 300;
-    font-stretch: normal;
-    font-style: normal;
-    line-height: 1.67;
-    letter-spacing: normal;
-    text-align: center;
-    color: #596060;
-    position: absolute; top: 45%;
-  }
-
-  .podChoroby-zwyrodnieniowe-staww {
-    width: 400px;
-    height: 176px;
-    font-family: Arial, Helvetica, sans-serif;
-    font-size: 18px;
-    font-weight: 300;
-    font-stretch: normal;
-    font-style: normal;
-    line-height: 1.67;
-    letter-spacing: normal;
-    text-align: center;
-    color: #596060; 
-    position: absolute; top: 45%;
-  }
-
-  .Rectangle-15 {
-    width: 492px;
-    height: 564px;
-    object-fit: none;
-    object-position: 70% 70%;
-    position: absolute; left: 228px; top: 3596px;
-  }
-
-  .Rectangle-17 {
-    width: 956px;
-    height: 564px;
-    object-fit: none;
-    object-position: 70% 70%;
-    position: absolute; left: 734px; top: 3596px;
-  }
-
-  .napisEpidemiologia-otyo-w-liczbach {
-    width: 714px;
-    height: 29px;
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
-    font-size: 30px;
-    font-weight: normal;
-    font-stretch: normal;
-    font-style: normal;
-    line-height: 1;
-    letter-spacing: normal;
-    text-align: left;
-    color: #0f65b1;
-    position: absolute; left: 35%; top: 4251px;
-  }
-
-  .Sax_Hero_Setting_Office_Global_Female_1 {
-    width: 652.2px;
-    height: 699.1px;
-    object-fit: none;
-    object-position: 42% 58%;
-    position: absolute; left: 1028px; top: 4334px;
-  }
-
-  .podEpidemiologia-otyo-w-liczbach-1 {
-    width: 709px;
-    height: 748px;
-    font-family: Arial, Helvetica, sans-serif;
-    font-size: 18px;
-    font-weight: 300;
-    font-stretch: normal;
-    font-style: normal;
-    line-height: 1.67;
-    letter-spacing: normal;
-    text-align: left;
-    color: #757c7c;
-    position: absolute; left: 240px; top: 4330px;
-
-  }
-
-  .podEpidemiologia-otyo-w-liczbach-2 {
-    font-size: 20px;
-    font-weight: 500;
-    color: #897ac8;
+.BlokImg img {
+  width: 100%;
+  height: 100%;
 }
 
-.play {
-    width: 103.7px;
-    height: 103.7px;
-    opacity: 0.85;
-    border: solid 4px #ffffff;
-    background-color: #ffffff;
-    border-radius: 50%;
-    position: absolute; left: 908.5px; top: 446.5px;
+.ImgBox1 {
+  width: 378.6px;
+  height: 450px;
+  float: left;
+  background-image: url("../img/shutterstock_1256n.png");
+  -o-object-fit: none;
+     object-fit: none;
+  margin: 10px;
+  margin-top: 50px;
+  margin-right: 160px;
 }
 
-.trojkatPlay {
-    width: 0;
-    height: 0;
-    border-top: 22px solid transparent;
-    border-bottom: 22px solid transparent;
-    border-left: 35px solid black;
-    opacity: 0.09;
-    position: absolute; left: 40%; top: 30%;
-    
-  }
+.ImgBox1__path {
+  width: 100%;
+  height: 20%;
+  opacity: 0.8;
+  background-color: #897ac8;
+  margin-top: 90%;
+  padding-top: 20px;
+}
 
+.ImgBox1__path--napis {
+  width: 100%;
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 20px;
+  font-weight: 500;
+  font-stretch: normal;
+  font-style: normal;
+  line-height: 1.5;
+  letter-spacing: normal;
+  text-align: center;
+  color: #ffffff;
+}
 
-  @media (min-width: 1800px) {
-    .to_beowe, body {width: 1700px;}
-    
-    .podEpidemiologia-otyo-w-liczbach-1 {width: 65%;}
+.ImgBox2 {
+  width: 378.6px;
+  height: 450px;
+  float: left;
+  background-image: url("../img/shutterstock_6916n.png");
+  -o-object-fit: none;
+     object-fit: none;
+  margin: 10px;
+  margin-top: 50px;
+  margin-right: 160px;
+}
+
+.ImgBox2__path {
+  width: 100%;
+  height: 20%;
+  opacity: 0.8;
+  background-color: #897ac8;
+  margin-top: 90%;
+  padding-top: 20px;
+}
+
+.ImgBox2__path--napis {
+  width: 100%;
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 20px;
+  font-weight: 500;
+  font-stretch: normal;
+  font-style: normal;
+  line-height: 1.5;
+  letter-spacing: normal;
+  text-align: center;
+  color: #ffffff;
+}
+
+.ImgBox3 {
+  width: 378.6px;
+  height: 450px;
+  float: left;
+  background-image: url("../img/shutterstock_4089n.png");
+  -o-object-fit: none;
+     object-fit: none;
+  margin: 10px;
+  margin-top: 50px;
+}
+
+.ImgBox3__path {
+  width: 100%;
+  height: 20%;
+  opacity: 0.8;
+  background-color: #897ac8;
+  margin-top: 90%;
+  padding-top: 20px;
+}
+
+.ImgBox3__path--napis {
+  width: 100%;
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 20px;
+  font-weight: 500;
+  font-stretch: normal;
+  font-style: normal;
+  line-height: 1.5;
+  letter-spacing: normal;
+  text-align: center;
+  color: #ffffff;
+}
+
+@media (max-width: 1243px) and (min-width: 600px) {
+  .BlokText {
+    width: 90%;
   }
-  @media (max-width: 1800px) and (min-width: 1600px) {
-    .to_beowe, body {width: 1500px;}
-    
-    .podEpidemiologia-otyo-w-liczbach-1 {width: 65%;}
+  .BlokImg {
+    float: none;
+    display: inline-block;
   }
-  @media (max-width: 1600px) and (min-width: 1400px) {
-    .to_beowe, body {width: 1300px;}
-    
-    .podEpidemiologia-otyo-w-liczbach-1 {width: 65%;}
+}
+
+@media (max-width: 600px) {
+  .BlokText {
+    width: 100%;
   }
-  @media (max-width: 1400px) and (min-width: 1200px) {
-    .to_beowe, body {width: 1100px;}
-    
-    .podEpidemiologia-otyo-w-liczbach-1 {width: 65%;}
+  .BlokText__glownyNapis {
+    text-align: center;
   }
-  @media (max-width: 1200px) and (min-width: 1000px) {
-    .to_beowe, body {width: 900px;}
-    
-    .podEpidemiologia-otyo-w-liczbach-1 {width: 65%;}
+  .BlokText__pobocznyNapis {
+    text-align: center;
   }
-  @media (max-width: 1000px) and (min-width: 800px) {
-    .to_beowe, body {width: 700px;}
-    
-    .podEpidemiologia-otyo-w-liczbach-1 {width: 65%;}
+  .Rectangle-7 {
+    width: 100%;
   }
-  @media (max-width: 800px) and (min-width: 500px) {
-    .to_beowe, body {width: 400px;}
-    
-    .podEpidemiologia-otyo-w-liczbach-1 {width: 100%;}
-  }
-  @media (max-width: 500px){
-    .to_beowe, body {width: 90%;}
-    
-    .podEpidemiologia-otyo-w-liczbach-1 {width: 100%;}
-  }
+}
+/*# sourceMappingURL=ochorobieStyle.css.map */
